delete individual ideas

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,15 @@
+.background {
+  background-image: url('forest-opacity.jpg');
+  background-position: center;
+  background-attachment: fixed;
+}
+
+#header {
+  font-family: Pacifico;
+  text-align: center;
+  font-size: 64px;
+}
+
 body h5 {
   text-align: center;
 }
