changed font to 'Oxygen' and widened idea columns

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,6 +32,7 @@ body h5 {
 
 .idea-info p, .idea-info h5 {
   text-align: center;
+  font-family: 'Oxygen', sans-serif;
 }
 
 .btn-container, .btn-container button {
