--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js' }
     %link{ rel: "stylesheet", href: "https://cdn.jsdelivr.net/foundation-icons/3.0/foundation-icons.min.css" }
     %link{ rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Pacifico" }
+    %link{ rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Oxygen" }
 
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
