--- a/app/views/ideas/index.html
+++ b/app/views/ideas/index.html
@@ -10,12 +10,12 @@
     </div>
     <div class='row'>
       <div class='small-8 small-centered columns'>
-        <input type='text' placeholder='Idea name...' v-model='newIdeaTitle'>
-        <textarea placeholder='Idea body...' v-model='newIdeaBody'></textarea>
+        <input type='text' placeholder='name...' v-model='newIdeaTitle'>
+        <textarea placeholder='details...' v-model='newIdeaBody'></textarea>
         <div class='row'>
           <div class='small-4 small-centered columns btn-container'>
-            <button type='submit' class='primary button hollow' v-on:click="newIdea( newIdeaTitle, newIdeaBody )">
-              <i class="fi-lightbulb"></i> Create!
+            <button type='submit' class='success button hollow' v-on:click="newIdea( newIdeaTitle, newIdeaBody )">
+              <i class="fi-lightbulb"></i> save!
             </button>
         </div>
       </div>
@@ -26,12 +26,23 @@
 <div id='ideas'>
   <div class='row' v-for='idea of ideas' id="idea-{{ idea.id }}" track-by="$index">
     <div class='small-6 small-centered columns idea-container'>
-      <div class='callout success idea-info'>
-        <h5><strong>{{ idea.title }}</strong></h5>
-        <p>{{ idea.quality }}</p>
-        <p>{{ idea.body }}</p>
+      <div class='callout primary idea-info'>
+        <template v-if='editable'>
+          <input type='text' value="{{ idea.title }}" v-show="editable">
+          <textarea type='text' v-show="editable">{{ idea.body }}</textarea>
+        </template>
+        <template v-if='!editable'>
+          <h5><strong>{{ idea.title }}</strong></h5>
+          <p>{{ idea.quality }}</p>
+          <p>{{ idea.body }}</p>
+        </template>
         <div class='row'>
-          <div class='small-3 small-offset-9 columns btn-container'>
+          <div class='small-3 columns btn-container'>
+            <button class='button warning hollow' v-on:click='editIdea(idea.id)'>
+              <i class='fi-page-edit'></i>
+            </button>
+          </div>
+          <div class='small-3 small-offset-6 columns btn-container'>
             <button class='button alert hollow' v-on:click='deleteIdea(idea.id)'>
               <i class='fi-x'></i>
             </button>
@@ -40,4 +51,6 @@
       </div>
     </div>
   </div>
+</div>
+<div class='filler'>
 </div>
