change header font

--- a/app/views/ideas/index.html
+++ b/app/views/ideas/index.html
@@ -1,6 +1,6 @@
 <div class='filler'>
 </div>
-<h1 id='header'>Ideabox (with Vue!)</h1>
+<h1 id='header'>Ideabox (with Vue.js!)</h1>
 
 <div class='filler'>
 </div>
